[project]
name = "aihealth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.5",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.0",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.0",
    "langchain-huggingface>=1.1.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.4",
    "pydantic>=2.12.5",
    "pypdf>=6.4.0",
    "pypdf2>=3.0.1",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.51.0",
]
